Occupation calculation implemented

--- a/ParkingFinder.API/appsettings.json
+++ b/ParkingFinder.API/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -13,5 +14,11 @@
     "ValidAudience": "http://localhost:5222",
     "ValidIssuer": "CLIENT",
     "Secret": "8gXV4EUfaUGd1swR"
+  },
+  "Parking": {
+    "BlockDuration": 180,
+    "OccupationServiceDelay": 60,
+    "BookingServiceDelay": 15,
+    "MovingNumber": 10 
   }
 }
