--- a/ParkingFinder.API/appsettings.json
+++ b/ParkingFinder.API/appsettings.json
@@ -17,8 +17,9 @@
   },
   "Parking": {
     "BlockDuration": 180,
+    "MaxOccupationDays": 3,
     "OccupationServiceDelay": 60,
     "BookingServiceDelay": 15,
-    "MovingNumber": 10 
+    "SpotsToTake": 10 
   }
 }
